# ArloBot

./: .gitattributes  .gitignore  .travis.yml  ArloURDF-Calculations.xlsx  FullTestRoutine.MD  Install_Propeller_Code.sh  LICENSE  README.md  RobotTuningNotes.md  ToDoList.md  TuningROS.txt  addRuleForUSBRelayBoard.sh  amclNavigate.sh  auto-explore.sh  compareArlo2Turtle.sh  drcontrol13.py  lightsOn.sh  list-maps.sh  load-map.sh  manualTests.txt  modelrobot.sh  navigation.rviz  offLights.sh  pm2Config.json  pullArlobotHere.sh  pullFoxyTestFiles.sh  renovate.json  ros scratch.txt  runTests.sh  save-map.sh  setScreenTimeout.sh  setup-foxy.sh  setup-indigo.sh  setup-jazzy.sh  setup-kinetic.sh  setup-melodic-test-DO_NOT_USE.sh  setup-melodic.sh  setup-noetic.sh  setup.sh  start-SLAM.sh  (+12 more)
PropellerCodeForArloBot/2ndBoardCode/: 2ndBoardCode.c  CMakeLists.txt
PropellerCodeForArloBot/Calib/: CMakeLists.txt  Calib.c
PropellerCodeForArloBot/MotorResponseTesting/: CMakeLists.txt  MotorResponseTesting.c  MotorResponseTesting.side
PropellerCodeForArloBot/ROSInterfaceForArloBot/: CMakeLists.txt  ROSInterfaceForArloBot.c
PropellerCodeForArloBot/ROSInterfaceForArloBot/include/: CalculateChecksum.h  SerialDataVariables.h  mcp3208.h  mcp3208_IR_cm.h  pollGyro.h  pollPropBoard2.h  versionNumber.h
arlobot_ros/: CMakeLists-foxy.txt  CMakeLists.txt  arlobot.urdf  package-foxy.xml  package.xml  propellerbot_node.py  setup.cfg  setup.py
arlobot_ros/arlobot_ros/: OdomStationaryBroadcaster.py  OdometryPublisher.py  PropellerSerialDataPacketTypes.py  PropellerSerialGateway.py  PropellerSerialInterface.py  PropellerSerialTest.py  arlobot_teleop_key.py  checkPropellerCodeVersionNumber.py  propeller_node.py
arlobot_ros/launch/: 3dsensor.launch  3dsensor_only.launch  arlobot_gohome.launch  arlobot_goto.launch  arlobot_safety.launch  arlobot_safety.launch.py  arlobot_usbrelay.launch  arlobot_usbrelay.launch.py  auto_docking.launch  camshift.launch  keyboard_teleop.launch  keyboard_teleop.launch.py  minimal.launch  minimal.launch.py  mobile_base.launch.py  mobile_base.launch.xml  mobile_base.launch.xml.py  model_robot.launch  model_robot.launch.py  movement_test.launch  object_follower.launch  object_tracker.launch  propeller_node.launch.py  propeller_node_launch.py  publish_robot_model.launch.py  quaternion_test.launch  robot.launch  robot.launch.py  robot_launch.py  rplidar.launch  rplidar.launch.py  slam_toolbox.launch  slam_toolbox_use_bag_file.launch  sweep.launch  sweep2scan.launch  twist_mux.launch.py  view_all_sources.launch  view_navigation.launch  view_robot.launch  view_robot.launch.py  (+5 more)
arlobot_ros/launch/includes/: move_base.launch.xml  publish_robot_model.xml  publish_robot_model.xml.py  twist_mux.launch  twist_mux.launch.py
arlobot_ros/meshes/: 28971-Caster-Wheel-Kit-v1.0_simplified.stl
arlobot_ros/msg/: ArloSafety.msg  ArloStatus.msg  arloSafety.msg
arlobot_ros/param/: EXAMPLE-costmap_common_params_multiple_input.yaml  arlobot.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  mapper_params_online_async.yaml  move_base_params.yaml  mux.yaml  nav2_params.yaml  teb_local_planner_params.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml  usbrelay.yaml
arlobot_ros/rviz/: allSources.rviz  navigation.rviz  simple.rviz  xv11.rviz
arlobot_ros/scripts/: OdomStationaryBroadcaster.py  PropellerSerialDataPacketTypes.py  PropellerSerialGateway.py  PropellerSerialInterface.py  PropellerSerialTest.py  PropellerSerialTestCursesInterface.py  arlobot_gohome.py  arlobot_goto.py  arlobot_movement_test.py  arlobot_quaternion_test.py  arlobot_safety.py  arlobot_teleop_key  arlobot_usbrelay.py  camshift.py  checkPropellerCodeVersionNumber.py  laser_filter.py  propellerbot_node.py
arlobot_ros/src/: autodocking_irCode.cpp  turtlebot_joy.cpp
arlobot_ros/srv/: FindRelay.srv  UnPlug.srv
arlobot_ros/urdf/: 3d_camera_position_chrisl8.urdf.xacro  Readme.MD  arlo.urdf.xacro  arlo_2stack.urdf.xacro  asus_xtion_pro.urdf.xacro  common.urdf.xacro  common_chrisl8.urdf.xacro  common_default.urdf.xacro
src/arlobot/arlobot_bringup/: CMakeLists.txt  package.xml
src/arlobot/arlobot_bringup/launch/: 3dsensor.launch  follower.launch  kinect.launch  minimal.launch  mobile_base.launch.xml  mobile_base_with_ekf.launch.xml  model_robot.launch  xv11.launch  xv11_remap_for_dual_use.launch
src/arlobot/arlobot_bringup/param/: arlobot.yaml  encoders.yaml  mux.yaml
src/arlobot/arlobot_bringup/scripts/: OdomStationaryBroadcaster.py  PropellerSerialDataPacketTypes.py  PropellerSerialGateway.py  PropellerSerialInterface.py  PropellerSerialTest.py  PropellerSerialTestCursesInterface.py  SerialDataGateway.py  checkPropellerCodeVersionNumber.py  drcontrol.py  propellerbot_node.py  turtlebot_node.py
src/arlobot/arlobot_cartographer/: CMakeLists.txt  package.xml
src/arlobot/arlobot_cartographer/configuration_files/: map_2d.lua  map_2d_asus_xtion_pro.lua  map_2d_xv11.lua
src/arlobot/arlobot_cartographer/launch/: 2d_cartograper.launch  (+5 more)
src/arlobot/arlobot_description/: CMakeLists.txt  package.xml
src/arlobot/arlobot_explore/: CMakeLists.txt  package.xml
src/arlobot/arlobot_launchers/: CMakeLists.txt  package.xml
src/arlobot/arlobot_msgs/: CMakeLists.txt  package.xml
src/arlobot/arlobot_safety/: CMakeLists.txt  package.xml
src/arlobot/arlobot_usbrelay/: CMakeLists.txt  package.xml
src/arlobot/arlobot_vision/: CMakeLists.txt  package.xml
src/arlobot_apps/arlobot_navigation/: CMakeLists.txt  package.xml
src/arlobot_apps/arlobot_teleop/: CMakeLists.txt  package.xml
src/arlobot_viz/arlobot_rviz_launchers/: CMakeLists.txt  package.xml
src/metatron_babelfish/: CMakeLists.txt  package.xml
src/metatron_babelfish/launch/: metatron_babelfish.launch
src/metatron_babelfish/param/: dictionary.yaml
src/metatron_babelfish/scripts/: metatron_babelfish.py
src/metatron_id/: CMakeLists.txt  package.xml
src/metatron_id/launch/: metatron_id.launch  metatron_id_ONLY.launch
src/metatron_id/scripts/: metatron_id.py
(+676 files in other folders)
