<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arlobot_ros</name>
  <version>0.1.0</version>
  <description>
    arlobot_ros provides all ROS functionality for ArloBot.
  </description>
  <maintainer email="christenlofland@gmail.com">Christen Lofland</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="christenlofland@gmail.com">Christen Lofland</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>slam_toolbox</depend>
  <depend>tf2_ros</depend>
  <depend>move_base</depend>
  <depend>move_base_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>twist_mux</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>actionlib</depend>
  <depend>teb_local_planner</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joy</depend>
  <depend>rosbridge_server</depend>
  <depend>tf2_tools</depend>
  <depend>amcl</depend>
  <depend>base_local_planner</depend>
  <depend>carrot_planner</depend>
  <depend>clear_costmap_recovery</depend>
  <depend>costmap_2d</depend>
  <depend>dwa_local_planner</depend>
  <depend>fake_localization</depend>
  <depend>global_planner</depend>
  <depend>map_server</depend>
  <depend>move_slow_and_clear</depend>
  <depend>nav_core</depend>
  <depend>navfn</depend>
  <depend>rotate_recovery</depend>
  <depend>voxel_grid</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>teleop_twist_joy</depend>
  <depend>rosserial_python</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
