<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arlobot_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="christen@lofland.net">chrisl8</maintainer>
  <license>Apache-2.0</license>

  <depend>twist_mux</depend>
  <depend>rosbridge_server</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>navigation2</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
