<?xml version="1.0"?>
<package>
  <name>metatron_babelfish</name>
  <version>0.1.0</version>
  <description>
     This package will do all of the speaking for Metatron by translating
     Metatron's subsconscience thoughts into audible words in English
     (although another language would be possible).
     Actually this is probably the OPPOSITE of a babelfish, but the name sounds so cool.
     freeing other bits of the robot to live in their eerie silence.
     This package will consist of a node that both listens to topics
     for things to talk about, and provides services for other pakcages
     to request speech via.
     I'm not sure who is going to deal with translating commands from
     humans to Metatron. That could be here, or somewhere else,
     or maybe it won't be any one place?
  </description>
  <maintainer email="hoopy@ekpyroticfrood.net">Hoopy Frood</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/Metatron</url>
  <author email="hoopy@ekpyroticfrood.net">Hoopy Frood</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>metatron_id</run_depend>
</package>
