<?xml version="1.0"?>
<package>
  <name>metatron_id</name>
  <version>0.1.0</version>
  <description>
     This package is the core of my personal robot named Metatron.
     It will contain custom behaviors, interfaces and actions.
     This package depends on the arlobot packages which should provide
     the more generic robot functions.
  </description>
  <maintainer email="hoopy@ekpyroticfrood.net">Hoopy Frood</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/Metatron</url>
  <author email="hoopy@ekpyroticfrood.net">Hoopy Frood</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>arlobot_bringup</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>arlobot_bringup</run_depend>
</package>
