<?xml version="1.0"?>
<package format="2">
  <name>arlobot_bringup</name>
  <version>0.1.0</version>
  <description>
     arlobot_bringup provides roslaunch scripts for starting the ArloBot base functionality.
     This is based off of the turtlebot_bringup package, though somewhat consolidated.
  </description>
  <maintainer email="ekpyroticfrood@gmail.com">Chris L8</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="ekpyroticfrood@gmail.com">Chris L8</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>zeroconf_avahi</depend>
  <depend>yocs_cmd_vel_mux</depend>
  <depend>arlobot_description</depend>
  <depend>arlobot_safety</depend>
  <depend>robot_state_publisher</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>openni_launch</depend>
  <depend>rocon_app_manager</depend>
  <depend>depthimage_to_laserscan</depend>
</package>
