<?xml version="1.0"?>
<package format="2">
  <name>arlobot_cartographer</name>
  <version>0.1.0</version>
  <description>
     arlobot_cartographer runs the Google Cartographer SLAM system
  </description>
  <maintainer email="ekpyroticfrood@gmail.com">Chris L8</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="ekpyroticfrood@gmail.com">Chris L8</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>
