<?xml version="1.0"?>
<package format="2">
  <name>arlobot_description</name>
  <version>0.1.0</version>
  <description>
    The arlobot_description package provides a complete 3D model of the ArloBot for simulation and visualization.
  </description>
  <maintainer email="ekpyroticfrood@gmail.com">Chris L8</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="ekpyroticfrood@gmail.com">Chris L8</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
