<?xml version="1.0"?>
<package format="2">
  <name>arlobot_launchers</name>
  <version>0.1.0</version>
  <description>The arlobot_launchers package</description>
  <maintainer email="ekpyroticfrood@gmail.com">Chris L8</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="ekpyroticfrood@gmail.com">Chris L8</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
