<?xml version="1.0"?>
<package format="2">
  <name>arlobot_safety</name>
  <version>0.1.0</version>
  <description>
     arlobot_safety will monitor a few items to determine if it is safe for the robot
     to move, and will provide a location and method for other packages to
     tell the robot that it must stop and shut down.
  </description>
  <maintainer email="ekpyroticfrood@gmail.com">Chris L8</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="ekpyroticfrood@gmail.com">Chris L8</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>
