<?xml version="1.0"?>
<package format="2">
  <name>arlobot_usbrelay</name>
  <version>0.1.0</version>
  <description>
     arlobot_usbrelay will control and monitor the USB Relay board.
     It will maintain paramaeters describing what relay numbers do what.
     It will publish a topic listing the status of all relays both by number,
     and by name.
     It will host a service that can be called to toggle any relay by number
     or by name.
  </description>
  <maintainer email="ekpyroticfrood@gmail.com">Chris L8</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="ekpyroticfrood@gmail.com">Chris L8</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>zeroconf_avahi</depend>
  <depend>yocs_cmd_vel_mux</depend>
  <depend>arlobot_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>rocon_app_manager</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
</package>
