<?xml version="1.0"?>
<package>
  <name>arlobot_navigation</name>
  <version>0.1.0</version>
  <description>
     arlobot_navigation is a copy of turtlebot_navigation modified for use on the Parallax ArloBot
     NOTE: It may not contain all of the files from turtlebot_navigation, only those that I was
     not able to directly source from the turtlebot package in my program.
  </description>
  <maintainer email="hoopy@ekpyroticfrood.net">Hoopy Frood</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="hoopy@ekpyroticfrood.net">Hoopy Frood</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>arlobot_bringup</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>

  </export>
</package>
