<?xml version="1.0"?>
<package format="2">
  <name>arlobot_navigation</name>
  <version>0.1.0</version>
  <description>
     arlobot_navigation is a copy of turtlebot_navigation modified for use on the Parallax ArloBot
  </description>
  <maintainer email="ekpyroticfrood@gmail.com">Chris L8</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="ekpyroticfrood@gmail.com">Chris L8</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base</depend>
  <depend>map_server</depend>
  <depend>amcl</depend>
  <depend>gmapping</depend>
  <depend>arlobot_bringup</depend>
  <depend>dwa_local_planner</depend>
</package>
