<?xml version="1.0"?>
<package>
  <name>arlobot_teleop</name>
  <version>0.1.0</version>
  <description>
     arlobot_teleop is a copy of turtlebot_teleop modified for use on the Parallax ArloBot
     NOTE: It may not contain all of the files from turtlebot_teleop, only those that I was
     not able to directly source from the turtlebot package in my program.
  </description>
  <maintainer email="hoopy@ekpyroticfrood.net">Hoopy Frood</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="hoopy@ekpyroticfrood.net">Hoopy Frood</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>arlobot_bringup</run_depend>
</package>
