<?xml version="1.0"?>
<package format="2">
  <name>arlobot_rviz_launchers</name>
  <version>0.1.0</version>
  <description>
     arlobot_rviz_launchers is a copy of turtlebot_rviz_launchers modified for use on the Parallax ArloBot
     NOTE: It may not contain all of the files from turtlebot_rviz_launchers, only those that I was
     not able to directly source from the turtlebot package in my program.
  </description>
  <maintainer email="ekpyroticfrood@gmail.com">Chris L8</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chrisl8/ArloBot</url>
  <author email="ekpyroticfrood@gmail.com">Chris L8</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>rviz</depend>
  <depend>arlobot_bringup</depend>
</package>
